tests/agl/rejections/type/bare_return_non_unit.agl
def f() -> int =
  return
  1
f()
